# OnePlace

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.css-baseline/: home.txt
.github/workflows/: release.yml
docs/: data-saving-security.md
scripts/: appModelHierarchy.test.ts  appModelSecurity.test.ts  build-signed-release.mjs  cssStructure.test.ts  desktopStorage.test.ts  folderTreeImport.test.ts  markmapFeature.test.ts  oneNoteShortcuts.test.ts  onePlacePackage.test.ts  openNotebookRecovery.test.ts  publish-updater-release.mjs  referenceManager.test.ts  secretHash.test.ts
src/: App.css  App.tsx  index.css  main.tsx  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: appConstants.ts  appModel.ts  appPages.ts  appTypes.ts
src/components/: Icons.tsx
src/components/app/: AppShell.tsx  CommandBar.tsx  ContextMenuOverlay.tsx  MarkmapPreview.tsx  MarkmapTreeEditor.tsx  MoveCopyPageDialog.tsx  NavRail.tsx  NotePane.tsx  NotebooksPane.tsx  PagesPane.tsx  RibbonBar.tsx  ShortcutHelpDialog.tsx  SidePanes.tsx  TitleBar.tsx
src/components/ui/: ColorGrid.tsx  Combobox.tsx  Dialog.tsx  Menu.tsx  Popover.tsx  SplitButton.tsx  Tooltip.tsx  colors.ts  dialogContext.ts  dialogService.tsx  index.ts
src/features/app/: folderTreeImport.ts  markmapFeature.ts  (+21 more)
src/lib/: desktop.ts
src/styles/: app-chrome.css  app-overrides.css  app-pages.css  app-shell.css  app-sidebar.css  app-skin.css  app-theme.css  app-workspace.css
(+120 files in other folders)
