[package]
name = "oneplace"
version = "0.1.12"
description = "OnePlace desktop shell built with Tauri"
authors = ["OpenAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = true }
mime_guess = "2"
printpdf = "0.3.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
